--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <button id="submit">Submit</button>
 
     <script src="index.js"></script>
+    <script src="config.js"></script>
   </body>
 </html>
