--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
     <title>Weather App</title>
   </head>
-  <body>
+  <body id="body">
     <h1>Weather App</h1>
+
     <label for="cityname">City Name:</label>
+    <br />
     <input
       type="text"
+      class="form-control"
       id="cityname"
       name="cityname"
       placeholder="Please enter city name"
+      aria-label="City"
     />
     <ul id="list"></ul>
-    <button id="submit">Submit</button>
-
+    <button id="submit" type="button" class="btn btn-primary">Submit</button>
     <script src="config.js"></script>
     <script src="index.js"></script>
   </body>
